--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>placeholder for now</h1>
+        <h1>Just a placeholder (for now)</h1>
         <p>Hey! You're here early. This page will soon be the official site for Fragments of Us, the game I'm working on. For now, it's just me, Blurio, but hopefully I'll get some more people to work with me soon!</p>
     </body>
 </html>
