update: new person joined development!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Just a placeholder (for now)</h1>
-        <p>Hey! You're here early. This page will soon be the official site for Fragments of Us, the game I'm working on. For now, it's just me, Blurio, but hopefully I'll get some more people to work with me soon!</p>
+        <p>Hey! You're here early. This page will soon be the official site for Fragments of Us, the game I'm working on. <s>For now, it's just me, Blurio, but hopefully I'll get some more people to work with me soon!</s></p>
+        <p>Big update: my <strong>intricate business partner</strong> - and friend - Shark has joined me in development! This is a big day! 26th and 27 of december 2024: creation of the site and project and Shark joining!</p>
     </body>
 </html>
